--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 everywhere</span>
         </div>
         <div>
-            <div class="updated">Last updated: Sep 23, 2023</div>
+            <div class="updated">Last updated: Jan 8, 2024</div>
             <div class="download">
                 <a href="Dzmitry Mikhalkou.pdf" download="Dzmitry Mikhalkou.pdf" class="pdf">Save as PDF</a>
                 <a href="https://trainymonked.github.io/resume/ru" class="lang">На русском</a>
@@ -32,12 +32,72 @@
     </header>
 
     <section class="briefly">
-        <p class="title">Front-end Developer <span class="type">with 2 years of experience</span></p>
+        <p class="title">Front-end Developer <span class="type">with 3 years of experience</span></p>
         <p>23 years old, Bachelor of Engineering</p>
-        <p>Szczecinek, Poland | Ready for relocation</p>
+        <p>Belarus | Ready for relocation</p>
+    </section>
+
+    <section class='why'>
+        <h1>Why me? I'm..</h1>
+        <ul>
+            <li>Experienced</li>
+            <li>Flexible</li>
+            <li>A Team Player</li>
+            <li>Detail-oriented</li>
+            <li>Attentive</li>
+        </ul>
     </section>
 
     <p class="heading">Latest Projects:</p>
+
+    <section class="project">
+        <div class="timeline">
+            Dec 2023 - Dec 2023
+            <br>2 weeks
+        </div>
+        <div>
+            <div class="title">Music Next</div>
+            <div class="description">
+                Music Next is a Spotify-alike web app that allows you to store and listen to your own music.
+                You can listen to the songs, add them to your Liked Songs playlist, or upload your own songs.
+                The user has to be logged in and has to have a subscription, which can be bought via Stripe.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Responsibilities:</p>
+                <p>- Front-end developing with React.js, Tailwind CSS, TypeScript</p>
+                <p>- Back-end developing with Next.js, Supabase (PostgreSQL)</p>
+                <!-- <p>- Investigating and fixing bugs</p> -->
+                <p class="project__heading">Tech Stack:</p>
+                <p>
+                    Next.js, TypeScript, React, Tailwind CSS, Supabase (PostgreSQL), Git (GitHub), Vercel, Auth UI,
+                    Stripe.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="timeline">
+            Jul 2023 - Jul 2023
+            <br>2 weeks
+        </div>
+        <div>
+            <div class="title">ChatBot</div>
+            <div class="description">
+                ChatBot is a Telegram bot which uses OpenAI API to talk to ChatGPT.<br />
+                Features are: users white-list, suggestions, etc.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Responsibilities:</p>
+                <p>- Back-end developing with Node.js, JavaScript</p>
+                <!-- <p>- Investigating and fixing bugs</p> -->
+                <p class="project__heading">Tech Stack:</p>
+                <p>
+                    JavaScript, Node.js, Express.js, OpenAI API, Telegram Bot API, Git (GitHub), Render.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <section class="project">
         <div class="timeline">
@@ -55,7 +115,7 @@
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Front-end developing with React.js, Material UI, TypeScript</p>
                 <p>- Back-end developing with Next.js, Prisma ORM (PostgreSQL)</p>
-                <p>- Investigating and fixing bugs</p>
+                <!-- <p>- Investigating and fixing bugs</p> -->
                 <p class="project__heading">Tech Stack:</p>
                 <p>
                     Next.js, TypeScript, React, Material UI, Prisma ORM (PostgreSQL), Git (GitHub), Vercel, NextAuth.js.
@@ -90,58 +150,64 @@
         </div>
     </section>
 
-    <section class="project">
-        <div class="timeline">
-            Jun 2021 - Oct 2021
-            <br>5 months
-        </div>
-        <div>
-            <div class="title">"Super App" Website</div>
-            <div class="description">
-                The client had a government website full of services for a large city. Every business or individual user
-                can i.e. issue or modify a license using an easy to use UI in just about 6 minutes instead of going to
-                the office and waiting in line, etc.
-            </div>
-            <div class="responsibilities">
-                <p class="project__heading">Responsibilities:</p>
-                <p>- Front-end developing (using internal IDE based on React/Redux + TS)</p>
-                <p>- Extending business logic</p>
-                <p>- Investigating and fixing bugs</p>
-                <p>- Daily Scrum meetings in English</p>
-                <p class="project__heading">Tech Stack:</p>
-                <p>TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="project">
-        <div class="timeline">
-            Feb 2021 - May 2021
-            <br>4 months
-        </div>
-        <div>
-            <div class="title">Visual Flow</div>
-            <div class="description">
-                Visual Flow is a low code ETL solution designed for effective data manipulation via convenient and
-                user-friendly interface. The tool can integrate data from different sources (DB2, COS, Elastic Search),
-                perform data processing and transformation, leverage metadata for analysis and maintenance.
-            </div>
-            <div class="responsibilities">
-                <p class="project__heading">Responsibilities:</p>
-                <p>- Front-end developing with React.js and Redux</p>
-                <p>- Extending business logic</p>
-                <p>- Investigating and fixing bugs</p>
-                <p>- Enhancing code readability and reducing code smells</p>
-                <p>- Daily Scrum meetings</p>
-                <p class="project__heading">Tech Stack:</p>
-                <p>JavaScript, React.js, Redux, HTML5, CSS3, Git (GitLab, GitHub), Jira, Confluence, Swagger.</p>
-            </div>
-        </div>
-    </section>
-
     <section class="older-projects">
         <details>
             <summary>Show older projects</summary>
+
+            <div class="project">
+                <div class="timeline">
+                    Jun 2021 - Oct 2021
+                    <br>5 months
+                </div>
+                <div>
+                    <div class="title">"Super App" Website</div>
+                    <div class="description">
+                        The client had a government website full of services for a large city. Every business or
+                        individual user
+                        can i.e. issue or modify a license using an easy to use UI in just about 6 minutes instead of
+                        going to
+                        the office and waiting in line, etc.
+                    </div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Responsibilities:</p>
+                        <p>- Front-end developing (using internal IDE based on React/Redux + TS)</p>
+                        <p>- Extending business logic</p>
+                        <p>- Investigating and fixing bugs</p>
+                        <p>- Daily Scrum meetings in English</p>
+                        <p class="project__heading">Tech Stack:</p>
+                        <p>TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="timeline">
+                    Feb 2021 - May 2021
+                    <br>4 months
+                </div>
+                <div>
+                    <div class="title">Visual Flow</div>
+                    <div class="description">
+                        Visual Flow is a low code ETL solution designed for effective data manipulation via convenient
+                        and
+                        user-friendly interface. The tool can integrate data from different sources (DB2, COS, Elastic
+                        Search),
+                        perform data processing and transformation, leverage metadata for analysis and maintenance.
+                    </div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Responsibilities:</p>
+                        <p>- Front-end developing with React.js and Redux</p>
+                        <p>- Extending business logic</p>
+                        <p>- Investigating and fixing bugs</p>
+                        <p>- Enhancing code readability and reducing code smells</p>
+                        <p>- Daily Scrum meetings</p>
+                        <p class="project__heading">Tech Stack:</p>
+                        <p>JavaScript, React.js, Redux, HTML5, CSS3, Git (GitLab, GitHub), Jira, Confluence, Swagger.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <div class="project">
                 <div class="timeline">
                     Dec 2020 - Apr 2021
@@ -192,21 +258,27 @@
         </div>
     </section>
 
-    <section class="project">
-        <div class="timeline">
-            Apr 2019 - Aug 2019
-            <br>5 months
-        </div>
-        <div>
-            <div class="title">C# .NET Trainee</div>
-            <div class="client">🏢 EPAM Systems</div>
-            <div class="description">Internship</div>
-            <div class="responsibilities">
-                <p class="project__heading">Goals Achieved:</p>
-                <p>- Built a simple MVC project based on SRS</p>
-                <p>- Realized that JavaScript is everywhere, and I need to know it</p>
+    <section class="older-projects">
+        <details>
+            <summary>Show older courses</summary>
+
+            <div class="project">
+                <div class="timeline">
+                    Apr 2019 - Aug 2019
+                    <br>5 months
+                </div>
+                <div>
+                    <div class="title">C# .NET Trainee</div>
+                    <div class="client">🏢 EPAM Systems</div>
+                    <div class="description">Internship</div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Goals Achieved:</p>
+                        <p>- Built a simple MVC project based on SRS</p>
+                        <p>- Realized that JavaScript is everywhere, and I need to know it</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </details>
     </section>
 
     <section class="pets">
@@ -222,6 +294,7 @@
         <p>- React.js, Redux, TypeScript, Next.js, Prisma ORM</p>
         <p>- Material UI, PostgreSQL, Tailwind CSS</p>
         <p>- Node.js, Express.js, MongoDB, JWT, bcrypt.js</p>
+        <p>- Stripe, Telegram Bot API</p>
         <!-- <p>- JEST, Karma, Jasmine</p> -->
         <p>- Git, GitHub, GitLab, Gerrit, Jira</p>
         <p>- Responsive websites from design mock-ups (Figma)</p>
