--- a/ru/index.html
+++ b/ru/index.html
@@ -18,7 +18,7 @@
                     target="_blank">@trainymonked</a></span>
         </div>
         <div>
-            <div class="updated">Обновлено: 23 сентября 2023</div>
+            <div class="updated">Обновлено: 8 января 2024</div>
             <div class="download">
                 <a href="Дмитрий Михалков.pdf" download="Дмитрий Михалков.pdf" class="pdf">Сохранить PDF</a>
                 <a href="https://trainymonked.github.io/resume" class="lang">In English</a>
@@ -31,12 +31,62 @@
     </header>
 
     <section class="briefly">
-        <p class="title">Front-end разработчик <span class="type">с 2 годами опыта</span></p>
+        <p class="title">Front-end разработчик <span class="type">с 3 годами опыта</span></p>
         <p>23 года, высшее техническое образование</p>
-        <p>Щецинек, Польша | Готов к переезду</p>
+        <p>Беларусь | Готов к переезду</p>
     </section>
 
     <p class="heading">Последние проекты:</p>
+
+    <section class="project">
+        <div class="timeline">
+            Дек 2023 - Дек 2023
+            <br>2 недели
+        </div>
+        <div>
+            <div class="title">Music Next</div>
+            <div class="description">
+                Music Next — это веб-приложение с интерфейсом Spotify, которое можно использовать для хранения и
+                прослушивания своей музыки онлайн.
+                Песни можно слушать, добавлять в Любимые треки, а также можно загружать свои файлы.
+                Пользователь должен иметь активную подписку, которая покупается с помощью Stripe.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Обязанности:</p>
+                <p>- Front-end разработка с использованием React.js, Tailwind CSS, TypeScript</p>
+                <p>- Back-end разработка с использованием Next.js, Supabase (PostgreSQL)</p>
+                <!-- <p>- Поиск и исправление недочетов</p> -->
+                <p class="project__heading">Стек технологий:</p>
+                <p>
+                    Next.js, TypeScript, React, Tailwind CSS, Supabase (PostgreSQL), Git (GitHub), Vercel, Auth UI,
+                    Stripe.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="timeline">
+            Июл 2023 - Июл 2023
+            <br>2 недели
+        </div>
+        <div>
+            <div class="title">ChatBot</div>
+            <div class="description">
+                ChatBot — это Telegram бот, который использует OpenAI API для общения с ChatGPT.<br />
+                Среди функций: white-list пользователей, предложения и т.д.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Обязанности:</p>
+                <p>- Back-end разработка с использованием Node.js, JavaScript</p>
+                <!-- <p>- Поиск и исправление недочетов</p> -->
+                <p class="project__heading">Стек технологий:</p>
+                <p>
+                    JavaScript, Node.js, Express.js, OpenAI API, Telegram Bot API, Git (GitHub), Render.
+                </p>
+            </div>
+        </div>
+    </section>
 
     <section class="project">
         <div class="timeline">
@@ -55,7 +105,7 @@
                 <p class="project__heading">Обязанности:</p>
                 <p>- Front-end разработка с использованием React.js, Material UI, TypeScript</p>
                 <p>- Back-end разработка с использованием Next.js, Prisma ORM (PostgreSQL)</p>
-                <p>- Поиск и исправление недочетов</p>
+                <!-- <p>- Поиск и исправление недочетов</p> -->
                 <p class="project__heading">Стек технологий:</p>
                 <p>
                     Next.js, TypeScript, React, Material UI, Prisma ORM (PostgreSQL), Git (GitHub), Vercel, NextAuth.js.
@@ -91,58 +141,62 @@
         </div>
     </section>
 
-    <section class="project">
-        <div class="timeline">
-            Июн 2021 - Окт 2021
-            <br>5 месяцев
-        </div>
-        <div>
-            <div class="title">"Super App" сайт</div>
-            <div class="description">
-                Есть сайт, который предоставляет множество услуг для большого города. Каждый бизнес или индивидуальный
-                пользователь может выпустить или изменить лицензию с помощью простого в использовании UI всего за 6
-                минут вместо того, чтобы идти в офис и ждать в очереди и т.д.
-            </div>
-            <div class="responsibilities">
-                <p class="project__heading">Обязанности:</p>
-                <p>- Front-end разработка (с использованием внутренней IDE, основанной на React/Redux + TS)</p>
-                <p>- Расширение бизнес-логики</p>
-                <p>- Поиск и исправление недочетов</p>
-                <p>- Ежедневные Scrum звонки на английском языке</p>
-                <p class="project__heading">Стек технологий:</p>
-                <p>TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="project">
-        <div class="timeline">
-            Фев 2021 - Май 2021
-            <br>4 месяца
-        </div>
-        <div>
-            <div class="title">Visual Flow</div>
-            <div class="description">
-                Visual Flow — это low-code ETL-решение для эффективной обработки данных с помощью
-                удобного интерфейса. Инструмент может брать данные из разных источников (DB2,
-                COS, Elastic Search), выполнять их преобразование, использовать метаданные для анализа.
-            </div>
-            <div class="responsibilities">
-                <p class="project__heading">Обязанности:</p>
-                <p>- Front-end разработка с использованием React.js and Redux</p>
-                <p>- Расширение бизнес-логики</p>
-                <p>- Поиск и исправление недочетов</p>
-                <p>- Повышение читабельности кода и сокращение плохого кода</p>
-                <p>- Ежедневные Scrum звонки</p>
-                <p class="project__heading">Стек технологий:</p>
-                <p>JavaScript, React.js, Redux, HTML5, CSS3, Git (GitLab, GitHub), Jira, Confluence, Swagger.</p>
-            </div>
-        </div>
-    </section>
-
     <section class="older-projects">
         <details>
             <summary>Показать старые проекты</summary>
+
+            <div class="project">
+                <div class="timeline">
+                    Июн 2021 - Окт 2021
+                    <br>5 месяцев
+                </div>
+                <div>
+                    <div class="title">"Super App" сайт</div>
+                    <div class="description">
+                        Есть сайт, который предоставляет множество услуг для большого города. Каждый бизнес или
+                        индивидуальный
+                        пользователь может выпустить или изменить лицензию с помощью простого в использовании UI всего
+                        за 6
+                        минут вместо того, чтобы идти в офис и ждать в очереди и т.д.
+                    </div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Обязанности:</p>
+                        <p>- Front-end разработка (с использованием внутренней IDE, основанной на React/Redux + TS)</p>
+                        <p>- Расширение бизнес-логики</p>
+                        <p>- Поиск и исправление недочетов</p>
+                        <p>- Ежедневные Scrum звонки на английском языке</p>
+                        <p class="project__heading">Стек технологий:</p>
+                        <p>TypeScript, React.js, Redux, Git (GitLab), Jira, Confluence.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="timeline">
+                    Фев 2021 - Май 2021
+                    <br>4 месяца
+                </div>
+                <div>
+                    <div class="title">Visual Flow</div>
+                    <div class="description">
+                        Visual Flow — это low-code ETL-решение для эффективной обработки данных с помощью
+                        удобного интерфейса. Инструмент может брать данные из разных источников (DB2,
+                        COS, Elastic Search), выполнять их преобразование, использовать метаданные для анализа.
+                    </div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Обязанности:</p>
+                        <p>- Front-end разработка с использованием React.js and Redux</p>
+                        <p>- Расширение бизнес-логики</p>
+                        <p>- Поиск и исправление недочетов</p>
+                        <p>- Повышение читабельности кода и сокращение плохого кода</p>
+                        <p>- Ежедневные Scrum звонки</p>
+                        <p class="project__heading">Стек технологий:</p>
+                        <p>JavaScript, React.js, Redux, HTML5, CSS3, Git (GitLab, GitHub), Jira, Confluence, Swagger.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <div class="project">
                 <div class="timeline">
                     Дек 2020 - Апр 2021
@@ -191,21 +245,27 @@
         </div>
     </section>
 
-    <section class="project">
-        <div class="timeline">
-            Апр 2019 - Авг 2019
-            <br>5 месяцев
-        </div>
-        <div>
-            <div class="title">C# .NET стажер</div>
-            <div class="client">🏢 EPAM Systems</div>
-            <div class="description">Стажировка</div>
-            <div class="responsibilities">
-                <p class="project__heading">Достигнутые цели:</p>
-                <p>- Сделал простой MVC проект по тех. заданию</p>
-                <p>- Понял, что без JavaScript никуда</p>
+    <section class="older-projects">
+        <details>
+            <summary>Показать старые курсы</summary>
+
+            <div class="project">
+                <div class="timeline">
+                    Апр 2019 - Авг 2019
+                    <br>5 месяцев
+                </div>
+                <div>
+                    <div class="title">C# .NET стажер</div>
+                    <div class="client">🏢 EPAM Systems</div>
+                    <div class="description">Стажировка</div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Достигнутые цели:</p>
+                        <p>- Сделал простой MVC проект по тех. заданию</p>
+                        <p>- Понял, что без JavaScript никуда</p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </details>
     </section>
 
     <section class="pets">
@@ -221,6 +281,7 @@
         <p>- React.js, Redux, TypeScript, Next.js, Prisma ORM</p>
         <p>- Material UI, PostgreSQL, Tailwind CSS</p>
         <p>- Node.js, Express.js, MongoDB, JWT, bcrypt.js</p>
+        <p>- Stripe, Telegram Bot API</p>
         <!-- <p>- JEST, Karma, Jasmine</p> -->
         <p>- Git, GitHub, GitLab, Gerrit, Jira</p>
         <p>- Responsive верстка сайтов (Figma)</p>
